# rust-translation-api

./: Cargo.toml
output/: de.lang.json  en.lang.json  es.lang.json  fr.lang.json  it.lang.json  ja.lang.json  ko.lang.json  pt.lang.json  ru.lang.json
resource/: zh.json
src/: main.rs
src/common/path/: index.rs  mod.rs
